# obsidian

./: .gitignore  .gitmodules  100q.md  2.2.txt  AB,ADBC,BD,BKCE, CG, CKDC, DEEB, EHFHGE, GF, GKHGKF, KH.md  Alex.md  Alexandra.md  Answer.md  App Features and Ideas.md  Architecture.md  Assignment 3 - iae225.md  Autosuggest.md  Backend.md  Binary Search LC.md  Budget.md  Check with UV.md  Checklist.md  ConnectInstagramPage.md  Coverage Extra Credit.md  DemographicsCompletePage.md  DemographicsPage.md  Dev Job.md  Dev Overview.md  Doc to pdf.md  Euromododa.md  Extra Credit Proposal.md  FAQ.md  Federal Credit Union.md  HW 3.md  HW.md  Homework 1 PDS.md  Homework 3 INFOVI — IDEA.md  How to do demo.md  Hubspot.md  IMG_6308.heic  Investor Question — CBE.md  Isabella.md  John Bria.md  John Henry Thompson.md  Kickoff.md  (+110 more)
.makemd/: fileCache.mdc  superstate.mdc
Accelerator/: Mission Control — Accelerator.md  Spaceship.md
Bases/: Untitled.base
Classes/: Spaceship.md  sortspec.md
Classes + Uni/: Mission Control.md  Spaceship.md
Classes + Uni/Machine Learning/Homework/Homework 3/: HW 3 - iae225.md  hw3.ipynb  pyproject.toml
Envelope/: Envelope — First Draft.md
Excalidraw/: Architecture Summary.md  Architecture.excalidraw.md  Assignment 1 Answers 2024-09-27 15.09.21.excalidraw.md  Drawing 2024-09-16 14.35.10.excalidraw.md  Drawing 2024-09-27 11.11.23.excalidraw.md  Drawing 2024-09-27 14.10.27.excalidraw.md  Drawing 2024-09-27 14.18.40.excalidraw.md  Drawing 2025-01-20 14.26.44.excalidraw.md  Drawing 2025-01-20 15.15.03.excalidraw.md  PDS Design Process Example.md  (+18 more)
(+589 files in other folders)
