[project]
name = "homework-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "ipykernel>=6.29.5",
    "matplot>=0.1.9",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
]
